<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="empty_media">Ваша медиатека пуста</string>
    <string name="empty_playlist">Вы не создали ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favourite_tracks">Избранные треки</string>
    <string name="playlist">Плейлисты</string>
    <string name="settings">Настройки</string>
    <string name="theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="share_link">https://practicum.yandex.ru/profile/android-developer-plus/</string>
    <string name="support">Написать в поддержку</string>
    <string name="support_email">m.ihsanov2009@yandex.ru</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="agreement_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="not_found_error">Ничего не нашлось</string>
    <string name="refresh">Обновить</string>
    <string name="error_connection_title">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="error_connection_subtitle">Проблемы со связью</string>
    <string name="history_search">Вы искали</string>
    <string name="history_clear">Очистить историю</string>
    <string name="album_cover">Обложка альбома</string>
    <string name="plus_icon">Кнопка добавить</string>
    <string name="like_icon">Кнопка понравилось</string>
    <string name="play_icon">Кнопка воспроизвести</string>
    <string name="default_time">00:00</string>
    <string name="playlist_title">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="playlist_required">Обязательное поле</string>
    <string name="playlist_create">Создать</string>
    <string name="playlist_create_complete">Завершить создание плейлиста?</string>
    <string name="playlist_create_lost">Все несохраненные данные будут потеряны</string>
    <string name="playlist_create_cancel">Отмена</string>
    <string name="playlist_create_accept">Завершить</string>
    <string name="playlist_created">Плейлист %1$s создан</string>
    <plurals name="playlist_plurals">
        <item quantity="zero">%1$d треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="two">%1$d трека</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d треков</item>
    </plurals>
    <plurals name="playlist_details_plurals">
        <item quantity="zero">%1$d минут</item>
        <item quantity="one">%1$d минута</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минут</item>
    </plurals>
    <string name="playlist_add">Добавить в плейлист</string>
    <string name="track_is_added_to_playlist">Добавлено в плейлист %1$s</string>
    <string name="track_is_already_in_playlist">Трек уже добавлен в плейлист %1$s</string>
    <string name="playlist_detail_delete">Хотите удалить плейлист %1$s?</string>
    <string name="empty_playlist_details">Вы не добавили ни одного трека в плейлист</string>
    <string name="want_to_delete_track">Хотите удалить трек?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="playlist_detail_no_tracks">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="track_detail_message">%1$d. %2$s - %3$s (%4$s)</string>
    <string name="playlist_detail_more_share">Поделиться</string>
    <string name="playlist_detail_more_edit">Редактировать информацию</string>
    <string name="playlist_detail_more_delete">Удалить плейлист</string>
    <string name="want_to_delete_playlist">Хотите удалить плейлист?</string>

    <string name="save_edit_playlist">Сохранить</string>
    <string name="edit_playlist">Редактировать</string>

    <string name="no_permission">Отсутствует разрешение на уведомления. Предоставьте соответствующее разрешения в настройках</string>
</resources>