<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsFragment"
    tools:context=".ui.settings.fragment.SettingsFragment"
    android:background="@color/white_to_black"
    style="@style/ContainerStyle" >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_border_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="14dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/top_border_settings"
        >

        <TextView
            android:text="@string/settings"
            style="@style/NavigationText"
            android:paddingBottom="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/settings_margin_top"
        android:orientation="vertical"
        android:gravity="start">

        <com.google.android.material.switchmaterial.SwitchMaterial
            style="@style/ThemeSwitcher"
            android:id="@+id/themeSwitcher" />

        <LinearLayout
            style="@style/LayoutSettingsStyle"
            android:orientation="horizontal">

            <TextView
                android:text="@string/share"
                style="@style/TextSettingsStyle"/>

            <ImageView
                android:id="@+id/share"
                style="@style/ImageSettingsStyle"
                android:contentDescription="@string/share"
                android:src="@drawable/ic_share" />
        </LinearLayout>

        <LinearLayout
            style="@style/LayoutSettingsStyle">

            <TextView
                style="@style/TextSettingsStyle"
                android:text="@string/support" />

            <ImageView
                android:id="@+id/support"
                style="@style/ImageSettingsStyle"
                android:contentDescription="@string/share"
                android:src="@drawable/ic_support" />
        </LinearLayout>

        <LinearLayout
            style="@style/LayoutSettingsStyle">

            <TextView
                style="@style/TextSettingsStyle"
                android:text="@string/agreement" />

            <ImageView
                android:id="@+id/agreement"
                style="@style/ImageSettingsStyle"
                android:contentDescription="@string/agreement"
                android:src="@drawable/ic_agreement" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>