<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/search"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="2dp"
        style="@style/ContainerStyle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/arrow_back"
                style="@style/NavigationArrowIcon"
                android:contentDescription="@string/search" />

            <TextView
                style="@style/NavigationText"
                android:text="@string/search" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            tools:context=".MainActivity">

            <EditText
                android:id="@+id/textSearch"
                style="@style/TextSearchStyle"
                android:autofillHints="Song name"
                android:hint="@string/search"
                android:imeOptions="actionDone"
                android:singleLine="true" />

            <ImageView
                android:id="@+id/clearIcon"
                style="@style/IconSearchStyle"
                android:contentDescription="@string/search"
                android:visibility="gone" />
        </FrameLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trackSearchRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:id="@+id/searchNotification"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="gone"
            >

            <ImageView
                android:id="@+id/notFound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/not_found_error"
                android:src="@drawable/ic_not_found_light"/>

            <TextView
                android:id="@+id/errorText"
                android:layout_marginTop="16dp"
                android:text="@string/not_found_error"
                style="@style/TextErrorSearchStyle" />

            <TextView
                android:id="@+id/errorConnectionText"
                android:text="@string/error_connection_title"
                android:textAlignment="center"
                style="@style/TextErrorSearchStyle"/>

            <Button
                android:id="@+id/refreshButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/refresh"
                style="@style/RefreshButton"/>
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>