<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/settings_margin_top"
    android:paddingLeft="@dimen/main_padding_sides"
    android:paddingRight="@dimen/main_padding_sides"
    android:paddingBottom="@dimen/main_padding_bottom">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@drawable/shape"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/arrow_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/settings"
            android:layout_gravity="start"
            android:gravity="center_vertical"
            android:scaleType="center"
            android:src="@drawable/ic_arrow"
            android:paddingTop="@dimen/icon_padding"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="@color/black_russian"
            android:textSize="@dimen/main_text_size"
            android:layout_gravity="start"
            android:layout_marginStart="44dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/settings_margin_top"
        android:orientation="vertical"
        android:background="@drawable/shape"
        android:gravity="start">

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme"
            android:textSize="@dimen/second_text_size"
            android:paddingTop="@dimen/list_item_padding"
            android:paddingBottom="@dimen/list_item_padding"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:orientation="horizontal"
            android:paddingTop="@dimen/list_item_padding"
            android:paddingBottom="@dimen/list_item_padding">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:textColor="@color/black_russian"
                android:textSize="@dimen/second_text_size"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="start" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/settings"
                android:layout_gravity="center"
                android:gravity="end"
                android:scaleType="center"
                android:src="@drawable/ic_share"
                android:paddingEnd="@dimen/icon_padding_right"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:orientation="horizontal"
            android:paddingTop="@dimen/list_item_padding"
            android:paddingBottom="@dimen/list_item_padding">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/support"
                android:textColor="@color/black_russian"
                android:textSize="@dimen/second_text_size"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="start" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/settings"
                android:layout_gravity="center"
                android:gravity="end"
                android:scaleType="center"
                android:src="@drawable/ic_support"
                android:paddingEnd="@dimen/icon_padding_right"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:orientation="horizontal"
            android:paddingTop="@dimen/list_item_padding"
            android:paddingBottom="@dimen/list_item_padding">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/agreement"
                android:textColor="@color/black_russian"
                android:textSize="@dimen/second_text_size"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="start" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/settings"
                android:layout_gravity="center"
                android:gravity="end"
                android:scaleType="center"
                android:src="@drawable/ic_agreement"
                android:paddingEnd="@dimen/icon_padding_right"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>