<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.media.playlist.fragment.MediaNewPlaylistFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/arrow_back_playlist"
        style="@style/ArrowBackStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mainTitle"
        style="@style/NavigationText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:paddingTop="15dp"
        android:text="@string/new_playlist"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@id/arrow_back_playlist"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrow_back_playlist">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/left_boundary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/right_boundary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <ImageView
                android:id="@+id/playlist_cover"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="30dp"
                android:contentDescription="Add album cover to playlist"
                android:src="@drawable/new_playlist_cover_image"
                app:layout_constraintDimensionRatio="W,1:1"
                app:layout_constraintEnd_toEndOf="@id/right_boundary"
                app:layout_constraintStart_toStartOf="@id/left_boundary"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintVertical_chainStyle="packed" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/playlist_title_input"
                style="@style/TextInputStyle"
                android:theme="@style/TextInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="32dp"
                android:adjustViewBounds="true"
                android:hint="@string/playlist_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/playlist_cover">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/playlist_title_input_edit_text"
                    style="@style/TextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/playlist_description_input"
                style="@style/TextInputStyle"
                android:theme="@style/TextInputStyle"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginVertical="16dp"
                android:hint="@string/playlist_description"
                app:layout_constraintEnd_toEndOf="@id/right_boundary"
                app:layout_constraintStart_toStartOf="@id/left_boundary"
                app:layout_constraintTop_toBottomOf="@id/playlist_title_input">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/playlist_description_input_edit_text"
                    style="@style/TextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create_new_playlist_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="17dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/create_playlist_btn"
        android:enabled="false"
        android:fontFamily="@font/ys_display_medium"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/playlist_create"
        android:textAllCaps="false"
        android:textColor="@color/yp_white"
        android:textFontWeight="500"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
